--- a/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
@@ -18,9 +18,10 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a th:href="@{user}"><i class="fa fa-circle-o"></i>User Manager</a></li>
-            <li><a th:href="@{product}"><i class="fa fa-circle-o"></i>Product Manager</a></li>
-            <li><a th:href="@{category}"><i class="fa fa-circle-o"></i>Category Manager</a></li>
+            <li><a th:href="@{/admin/user}"><i class="fa fa-circle-o"></i>User Manager</a></li>
+            <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i>Product Manager</a></li>
+            <li><a th:href="@{/admin/category}"><i class="fa fa-circle-o"></i>Category Manager</a></li>
+            <li><a th:href="@{/admin/order}"><i class="fa fa-circle-o"></i>Order Manager</a></li>
           </ul>
         </li>
         
