--- a/Normal_DATN/src/main/resources/templates/Admin/page/order.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/order.html
@@ -20,59 +20,53 @@
                
                 <div class="form-group">
                   <label for="exampleInputEmail1">Order Id</label><br>
-                  <i style="color:red" th:errors="*{id}"></i>
-                  <i style="color:red" th:text="${ktTonTai}"></i>
-                  <div th:if="${edit} == false">
-                       <input th:field="*{id}" type="text" class="form-control" placeholder="Enter Order Id">
-                  </div>
-                  <div th:if="${edit} == true">
+     
                        <input th:field="*{id}" type="text" class="form-control" placeholder="Enter Order Id" readonly>
-                  </div>
+
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">User Id</label><br>
-                  <i style="color:red"th:errors="*{user}"></i>
-                  <input th:field="*{user}" type="text" class="form-control" placeholder="Enter User Id">
+          
+                  <input readonly th:field="*{user}" type="text" class="form-control" placeholder="Enter User Id">
                 </div>
                <div class="form-group">
                   <label for="exampleInputPassword1">Date</label><br>
-                   <i style="color:red"th:errors="*{orderDate}"></i>
-                  <input th:field="*{orderDate}" type="text" class="form-control" placeholder="Enter Order Date">
+       
+                  <input readonly th:field="*{orderDate}" type="text" class="form-control" placeholder="Enter Order Date">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">Phone</label><br>
-                   <i style="color:red"th:errors="*{phone}"></i>
+    
                    <i style="color:red" th:text="${ktPhone}"></i>
-                  <input th:field="*{phone}" type="text" class="form-control"  placeholder="Enter Phone">
+                  <input readonly th:field="*{phone}" type="text" class="form-control"  placeholder="Enter Phone">
                 </div>
                  <div class="form-group">
                   <label for="exampleInputPassword1">Address</label><br>
-                  <i style="color:red"th:errors="*{address}"></i>
-                  <i style="color:red" th:text="${ktEmail}"></i>
-                  <input th:field="*{address}" type="text" class="form-control"  placeholder="Enter Address">
+       
+                  <input readonly th:field="*{address}" type="text" class="form-control"  placeholder="Enter Address">
                 </div>
                     <div class="form-group">
                   <label for="exampleInputPassword1">Description</label><br>
-                  <Input th:field="*{description}" type="text" class="form-control"  placeholder="Enter Description">
+                  <Input readonly th:field="*{description}" type="text" class="form-control"  placeholder="Enter Description">
                 </div>
          <div class="form-group">
                   <label for="exampleInputPassword1">Amount</label><br>
-                  <input th:field="*{amount}" type="text" class="form-control"  placeholder="Enter Amount">
+                  <input readonly th:field="*{amount}" type="text" class="form-control"  placeholder="Enter Amount">
                 </div>
                  <div >
                   <label for="exampleInputPassword1">Status</label><br>
-                   <i style="color:red"th:errors="*{status}"></i><br>
+
                   <input th:field="*{status}" type="radio" name="status" value="Ordering">Ordering&ensp;&ensp;
-                   <input th:field="*{status}" type="radio"name="status" value="Cancelled">Cancelled&ensp;&ensp;
-                      <input th:field="*{status}" type="radio"name="status" value="DaGiao">DaGiao
+                   <input readonly th:field="*{status}" type="radio"name="status" value="Cancelled">Cancelled&ensp;&ensp;
+                      <input readonly th:field="*{status}" type="radio"name="status" value="DaGiao">DaGiao
                 </div>
               </div>
               <!-- /.box-body -->
                       <i style="color:red" th:text="${tb}"></i>
-                   <i style="color:red" th:text="${ktItMe}"></i>
+        
               <div class="box-footer">
               
-                <div th:if="${edit} == true">
+                <!-- <div th:if="${edit} == true">
                 
             
                 <button class="btn btn-primary" disabled>Add</button>
@@ -85,7 +79,7 @@
                  <button formaction="/admin/user/update" class="btn btn-primary" disabled>Update</button>
                      <button formaction="/admin/user/new?edit=false" class="btn btn-primary" >Reset</button>
                      
-                </div>
+                </div> -->
                
               </div>
             </form>
@@ -95,10 +89,11 @@
             <div class="box-header">
               <h3 class="box-title">Hover Data Table</h3>
                <h3 style="float:right;" class="box-title">
-               <form>
-                  <input  type="search" >
-                  <button>Search</button>
-               </form>
+               <form th:action="@{/admin/order/find}" method="post">
+					<input name="keywords" th:value="${keywords}">
+					<button>Search</button>
+					</form>
+
               </h3>
             </div>
             <!-- /.box-header -->
@@ -141,7 +136,7 @@
                  <td class="sorting_1">[[${HoLy.amount}]]</td>
                  <td class="sorting_1">[[${HoLy.status}]]</td>
            
-                  <td class="sorting_1"><a th:href="@{|/admin/order/edit?order=${HoLy.id}&edit=true|}">Edit</a></td>
+                  <td class="sorting_1"><a th:href="@{|/admin/order/edit?order=${HoLy.id}&edit=true|}">View</a></td>
                    
                   
                 </tr>
