--- a/Normal_DATN/src/main/resources/templates/Admin/page/user.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/user.html
@@ -62,7 +62,7 @@
                   <label for="exampleInputPassword1">Activated</label><br>
                    <i style="color:red"th:errors="*{activated}"></i><br>
                   <input th:field="*{activated}" type="radio" name="activated" value="false">Activate&ensp;
-                   <input th:field="*{activated}" type="radio"name="activated" value="true">Unactivate
+                   <input th:field="*{activated}" type="radio"name="activated" value="true">Inactivate
                 </div>
               </div>
               <!-- /.box-body -->
@@ -72,15 +72,16 @@
               
                 <div th:if="${edit} == true">
                 
-                <button formaction="/admin/user/new?edit=false" class="btn btn-primary" >Reset</button>
+               
                 <button class="btn btn-primary" disabled>Add</button>
                     <button formaction="/admin/user/update" class="btn btn-primary">Update</button>
-                    
+                     <button formaction="/admin/user/new?edit=false" class="btn btn-primary" >Reset</button>
                 </div>
                 <div th:unless="${edit} == true">
-                    <button formaction="/admin/user/new?edit=false" class="btn btn-primary">Reset</button>
+                    
                    <button class="btn btn-primary">Add</button>
                  <button formaction="/admin/user/update" class="btn btn-primary" disabled>Update</button>
+                 <button formaction="/admin/user/new?edit=false" class="btn btn-primary">Reset</button>
                      
                 </div>
                
@@ -92,8 +93,8 @@
             <div class="box-header">
               <h3 class="box-title">Hover Data Table</h3>
                <h3 style="float:right;" class="box-title">
-               <form>
-                  <input  type="search" >
+               <form th:action="@{/admin/user/find}" method="post">
+                  <input name="keywords" th:value="${keywords}" >
                   <button>Search</button>
                </form>
               </h3>
@@ -124,7 +125,7 @@
                 <tbody>
                 
                 
-                <tr th:each="Users:${users}" role="row" class="odd">
+                <tr th:each="Users:${page}" role="row" class="odd">
                   <td class="sorting_1">[[${Users.id}]]</td>
                  
                   <td class="sorting_1">[[${Users.fullname}]]</td>
@@ -150,7 +151,29 @@
                 </tr>
                </tbody>
                
-              </table></div></div><div class="row"><div class="col-sm-5"><div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div></div><div class="col-sm-7"><div class="dataTables_paginate paging_simple_numbers" id="example2_paginate"><ul class="pagination"><li class="paginate_button previous disabled" id="example2_previous"><a href="#" aria-controls="example2" data-dt-idx="0" tabindex="0">Previous</a></li><li class="paginate_button active"><a href="#" aria-controls="example2" data-dt-idx="1" tabindex="0">1</a></li><li class="paginate_button "><a href="#" aria-controls="example2" data-dt-idx="2" tabindex="0">2</a></li><li class="paginate_button "><a href="#" aria-controls="example2" data-dt-idx="3" tabindex="0">3</a></li><li class="paginate_button "><a href="#" aria-controls="example2" data-dt-idx="4" tabindex="0">4</a></li><li class="paginate_button "><a href="#" aria-controls="example2" data-dt-idx="5" tabindex="0">5</a></li><li class="paginate_button "><a href="#" aria-controls="example2" data-dt-idx="6" tabindex="0">6</a></li><li class="paginate_button next" id="example2_next"><a href="#" aria-controls="example2" data-dt-idx="7" tabindex="0">Next</a></li></ul></div></div></div></div>
+              </table>
+              </div>
+              </div>
+              <div class="row">
+              <div class="col-sm-5">
+              <div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Showing [[${page.number+1}]] to [[${page.totalPages}]] of [[${page.totalElements}]] users</div>
+              </div>
+              <div class="col-sm-7">
+               <div>
+                  <nav aria-label="Page navigation example">
+			  <ul class="pagination">
+			    <li class="page-item"><a class="page-link" th:href="@{|/admin/user?p =0|}">First</a></li>
+			    <li class="page-item"><a class="page-link" th:href="@{|/admin/user?p=${page.number-1 < 0 ? 0:page.number-1}|}">Previous</a></li>
+			    <li class="page-item"><a class="page-link" th:href="@{|/admin/user?p=${page.number+1 > page.totalPages - 1 ? page.totalPages - 1: page.number+1}|}">Next</a></li>
+			    <li class="page-item"><a class="page-link" th:href="@{|/admin/user?p=${page.totalPages-1}|}">Last</a></li>
+			  </ul>
+			</nav>
+			</div>
+              </div>
+              
+              </div>
+              </div>
+              </div>
             </div>
             <!-- /.box-body -->
           </div>
