--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -51,7 +51,7 @@
                                         <div class="col-lg-6 col-md-6">
                                             <div class="header_links">
                                                 <ul>
-                                                    <li><a href="contact.html" title="Contact">Contact</a></li>
+                                                    <li><a href="#" title="Contact">Contact</a></li>
                                                    <li><a th:href="@{/cart}" title="My cart">My cart</a></li>
                                                   
                                                     
@@ -76,7 +76,7 @@
 												       
 												        </ul>
 												      </li>
-                                                         
+                                                          </div> 
                                                          
                                                           <div th:unless="${#request.remoteUser}">
                                                            <li> <a class="nav-link dropdown" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
@@ -94,7 +94,7 @@
 												        </ul>
 												      </li>
                                                          </div>
-                                                     </div>
+                                                   
                                                 </ul>
                                             </div>   
                                         </div>
@@ -143,10 +143,10 @@
                                                          
                                                                 </div> 
                                                             </li>
-                                                            <li><a href="shop.html">shop</a>
+                                                            <li><a href="#">shop</a>
                                                                 <div class="mega_menu jewelry">
                                                                     <div class="mega_items jewelry">
-                                                                        <ul>
+                                                                 <!--      <ul>
                                                                             <li><a href="shop-list.html">shop list</a></li>
                                                                             <li><a href="shop-fullwidth.html">shop Full Width Grid</a></li>
                                                                             <li><a href="shop-fullwidth-list.html">shop Full Width list</a></li>
@@ -156,7 +156,7 @@
                                                                             <li><a href="single-product-sidebar.html">Product sidebar</a></li>
                                                                             <li><a href="single-product-video.html">Product Details video</a></li>
                                                                             <li><a href="single-product-gallery.html">Product Details Gallery</a></li>
-                                                                        </ul>
+                                                                        </ul>  -->  
                                                                     </div>
                                                                 </div>  
                                                             </li>
@@ -164,7 +164,7 @@
                                                                 <div class="mega_menu">
                                                                     <div class="mega_top fix">
                                                                         <div class="mega_items">
-                                                                            <h3><a href="#">Accessories</a></h3>
+                                                                        <!--    <h3><a href="#">Accessories</a></h3>
                                                                             <ul>
                                                                                 <li><a href="#">Cocktai</a></li>
                                                                                 <li><a href="#">day</a></li>
@@ -172,10 +172,10 @@
                                                                                 <li><a href="#">Sundresses</a></li>
                                                                                 <li><a href="#">Belts</a></li>
                                                                                 <li><a href="#">Sweets</a></li>
-                                                                            </ul>
+                                                                            </ul>-->  
                                                                         </div>
                                                                         <div class="mega_items">
-                                                                            <h3><a href="#">HandBags</a></h3>
+                                                                      <!--    <h3><a href="#">HandBags</a></h3>
                                                                             <ul>
                                                                                 <li><a href="#">Accessories</a></li>
                                                                                 <li><a href="#">Hats and Gloves</a></li>
@@ -183,7 +183,7 @@
                                                                                 <li><a href="#">Bras</a></li>
                                                                                 <li><a href="#">Scarves</a></li>
                                                                                 <li><a href="#">Small Leathers</a></li>
-                                                                            </ul>
+                                                                            </ul>   -->  
                                                                         </div>
                                                                         <div class="mega_items">
                                                                             <h3><a href="#">Tops</a></h3>
