đa ngôn ngữ của title

--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -38,12 +38,14 @@
                                         <div class="col-lg-6 col-md-6">
                                            <div class="switcher">
                                                 <ul>
-                                                    <li class="languages"><a href="#"><img th:src="@{/assets/img/logo/fontlogo.jpg}" alt=""> English <i class="fa fa-angle-down"></i></a>
+                                                   <li><a href="?lang=en" ><img th:src="@{/assets/img/icon/2.png}" alt=""> English</a></li>
+                                                    <li><a href="?lang=vi" ><img th:src="@{/assets/img/icon/1.png}" alt="">Việt Nam</a></li>
+                                                 <!--   <li class="languages"><a href="#"><span th:text="#{lo.mn.language }"></span><i class="fa fa-angle-down"></i></a>
                                                         <ul class="dropdown_languages">
-                                                            <li><a href="#"><img th:src="@{/assets/img/logo/fontlogo.jpg}" alt=""> English</a></li>
-                                                            <li><a href="#"><img th:src="@{/assets/img/logo/fontlogo2.jpg}" alt=""> French </a></li>
+                                                            <li><a href="?lang=en"><img th:src="@{/assets/img/logo/lgo.png}" alt=""> English</a></li>
+                                                            <li><a href="?lang=vi"><img th:src="@{/assets/img/logo/loo2.jpg}" alt=""> Việt Nam </a></li>
                                                         </ul>   
-                                                    </li> 
+                                                    </li> -->  
 
                                                 </ul>
                                             </div>
@@ -108,7 +110,7 @@
                                        <!--logo start-->
                                         <div class="col-lg-3 col-md-3">
                                             <div class="logo">
-                                                <a th:href="@{/index}"><img th:src="@{/assets/img/logo/logo.jpg.png}" alt=""></a>
+                                                <a th:href="@{/index}"><img th:src="@{/assets/img/2.png}" alt=""></a>
                                             </div>
                                         </div>
                                         <!--logo end-->
