--- a/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
@@ -3,7 +3,7 @@
   th:replace="~{/layout/layout::dynamic(~{::title},~{::body})}">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title th:text="#{home.title}"></title>
 </head>
 <body>
                         <!--header end -->
