--- a/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistoryDetail.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistoryDetail.html
@@ -5,7 +5,7 @@
 
 <head>
 <meta charset="UTF-8">
-<title>History</title>
+<title th:text="#{historydetail.title}"></title>
 </head>
 <body>
   <!--header end -->
