--- a/Normal_DATN/src/main/resources/templates/nguoiDung/shop.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/shop.html
@@ -3,7 +3,7 @@
   th:replace="~{/layout/layout::dynamic(~{::title},~{::body})}">
 <head>
 <meta charset="UTF-8">
-<title>Shop</title>
+<title th:text="#{shop.title}"></title>
 </head>
     <body>
                         <!--breadcrumbs area start-->
