--- a/Normal_DATN/src/main/resources/templates/nguoiDung/contactUs.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/contactUs.html
@@ -5,7 +5,7 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Checkout</title>
+<title th:text="#{contactus.title}"></title>
 </head>
     <body>
         
