--- a/Normal_DATN/src/main/resources/templates/Admin/page/category.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/category.html
@@ -14,16 +14,16 @@
              		 </div>
 					<div class="box box-primary">
 						<div class="box-header with-border">
-							<h3 class="box-title">Category Manager</h3>
+							<h3 class="box-title">Quản lý danh mục</h3>
 						</div>
 						<!-- /.box-header -->
 						<!-- form start -->
 						<form role="form">
 							<div class="box-body">
 								<div class="form-group">
-									<label for="exampleInputPassword1">Category Name</label> <input
+									<label for="exampleInputPassword1">Tên danh mục</label> <input
 										type="text" class="form-control" id="nameCategory"
-										placeholder="Insert name category">
+										placeholder="Thêm tên danh mục">
 								</div>
 							</div>
 							<!-- /.box-body -->
@@ -37,7 +37,7 @@
 					</div>
 					<div class="box">
 						<div class="box-header">
-							<h3 class="box-title">Hover Data Table</h3>
+							<h3 class="box-title">Dữ liệu danh mục</h3>
 						</div>
 						<!-- /.box-header -->
 						<div class="box-body">
