--- a/Normal_DATN/src/main/resources/templates/nguoiDung/checkout.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/checkout.html
@@ -86,7 +86,7 @@
                                                     </div>
      
                                                     <div class="col-12">
-                                                        <div class="order-notes">
+                                                     <div class="order-notes">
                                                              <label for="order_note">Order Notes</label>
                                                             <textarea id="order_note" name="description" placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
                                                         </div>    
@@ -95,19 +95,19 @@
                                                 </div>
                                                             <div class="payment_method">
                                                    <div class="panel-default">
-                                                        <input id="payment" name="check_method" type="radio" data-target="createp_account">
+                                                      <!--       <input id="payment" name="check_method" type="radio" data-target="createp_account">
                                                         <label for="payment" data-toggle="collapse" data-target="#method" aria-controls="method">Thanh toán bằng tiền mặt</label>
-
-                                                        <div id="method" class="collapse one" data-parent="#accordion">
-                                                            <div class="card-body1">
+-->    
+                                                     <div id="method" class="collapse one" data-parent="#accordion">
+                                                           <div class="card-body1">
                                                                <p>Thanh toán khi nhận được hàng</p>
                                                             </div>
                                                         </div>
                                                     </div> 
-                                                   <div class="panel-default">
-                                                        <input id="payment_defult" name="check_method" type="radio" data-target="createp_account">
+                                                 <div class="panel-default">
+                                                     <!--      <input id="payment_defult" name="check_method" type="radio" data-target="createp_account">
                                                         <label for="payment_defult" data-toggle="collapse" data-target="#collapsedefult" aria-controls="collapsedefult">Ví điện tử <img src="assets\img\visha\papyel.png" alt=""></label>
-
+  -->    
                                                         <div id="collapsedefult" class="collapse one" data-parent="#accordion">
                                                             <div class="card-body1">
                                                                <p>Thanh toán qua ví điện tử</p> 
