--- a/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistory.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistory.html
@@ -67,7 +67,7 @@
                                                         <td class="product_total">[[${HoLy.amount}*1]]</td>
                                                              <td class="product_total">[[${HoLy.status}]]</td>
                                                         <td class="product_remove"><a th:href="@{|/orderHistory/${HoLy.id}|}"><i class="fa fa-trash-o"></i></a></td>
-                                                        <td class="product_remove"><a th:href="@{|/orderHistoryDetail/${HoLy.id}|}">See</a></td>
+                                                        <td class="product_remove"><a th:href="@{|/orderHistoryDetail/${HoLy.id}|}">View</a></td>
                                                     
                                                      
 
