--- a/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
@@ -25,7 +25,7 @@
 
                                     <!--categorie menu start-->
                                     <div class="sidebar_widget catrgorie mb-35">
-                                        <h3>Categories</h3>
+                                        <h3><span th:text="#{lo.mn.category }"></span></h3>
                                         <ul>
                                       
 
@@ -46,7 +46,7 @@
                                     <!--sidebar banner-->
                                     <div class="sidebar_widget bottom ">
                                         <div class="banner_img">
-                                            <a href="#"><img src="assets\img\banner\banner9.jpg" alt=""></a>
+                                            <a href="#"><img src="assets\img\banner\holy1.jpg" alt=""></a>
                                         </div>
                                     </div>
                                     <!--sidebar banner end-->
