--- a/Normal_DATN/src/main/resources/templates/nguoiDung/shop.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/shop.html
@@ -27,7 +27,7 @@
                             <div class="row pos_home">
                                     <div class="col-lg-3 col-md-12">
                                       <div class="sidebar_widget catrgorie mb-35">
-                                        <h3>Categories</h3>
+                                        <h3><span th:text="#{lo.mn.category }"></span></h3>
                                         <ul>
                                       
 
@@ -48,7 +48,7 @@
                                     <div class="col-lg-9 col-md-12">
                                         <!--banner slider start-->
                                         <div class="banner_slider mb-35">
-                                            <img src="/assets/img/banner/bannner10.jpg" alt="">
+                                            <img src="/assets/img/slider/sl1.png" alt="">
                                         </div> 
                                         <!--banner slider start-->
 
