--- a/Normal_DATN/src/main/resources/templates/Admin/page/product.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/product.html
@@ -6,6 +6,9 @@
 		<section class="content">
 			<div class="row">
 				<div class="col-md-12">
+				<div id="messageProduct">
+               
+             		 </div>
 					<!-- general form elements -->
 					<div class="box box-primary">
 						<div class="box-header with-border">
@@ -28,7 +31,14 @@
 								<div class="form-group">
 									<label>Danh mục sản phẩm</label> <select class="form-control"
 										id="selectedCategory">
-										<option value="none">- Chọn category -</option>
+										
+									</select>
+								</div>
+								<div class="form-group">
+									<label>Dành cho</label> <select class="form-control"
+										id="selectedSubcategory">
+										<option value="1">Nam</option>
+										<option value="2">Nữ</option>
 									</select>
 								</div>
 								<div class="form-group">
@@ -51,7 +61,7 @@
 							</div>
 							<!-- /.box-body -->
 
-							<div class="box-footer">
+							<div class="box-footer productFooter">
 								<button type="submit" id="submitProductButton"
 									class="btn btn-primary">Submit</button>
 							</div>
@@ -93,6 +103,7 @@
 														rowspan="1" colspan="1"
 														aria-label="Engine version: activate to sort column ascending">Danh
 														mục</th>
+														
 													<th class="sorting" tabindex="0" aria-controls="example2"
 														rowspan="1" colspan="1"
 														aria-label="CSS grade: activate to sort column ascending">Số
